--- a/product.html
+++ b/product.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produk Kami</title>
-    <link rel="stylesheet" href="<?= base_url('asset/css/anm-product.css'); ?>">
+    <link rel="stylesheet" href="anm-product.css">
     <!-- Include other stylesheets and scripts -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
